# email-ml

./: LICENSE.txt  README.md  pyproject.toml
src/email_ml/: __about__.py  email.ipynb  gmail_mbox_message.py
tests/: __init__.py
