[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-ml"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Vijay Prakash", email = "prakash.vijay@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "bs4"
]

[project.urls]
Documentation = "https://github.com/Vijay Prakash/email-ml#readme"
Issues = "https://github.com/Vijay Prakash/email-ml/issues"
Source = "https://github.com/Vijay Prakash/email-ml"

[tool.hatch.version]
path = "src/email_ml/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/email_ml tests}"

[tool.coverage.run]
source_pkgs = ["email_ml", "tests"]
branch = true
parallel = true
omit = [
  "src/email_ml/__about__.py",
]

[tool.coverage.paths]
email_ml = ["src/email_ml", "*/email-ml/src/email_ml"]
tests = ["tests", "*/email-ml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
